fix extra right-side width on mobile devices

--- a/app/assets/stylesheets/_empty.scss
+++ b/app/assets/stylesheets/_empty.scss
@@ -7,6 +7,7 @@
   line-height: 1.5;
   margin-left: -40%;
   margin-top: 180px;
+  overflow: hidden;
   padding: 1em;
   position: absolute;
   text-align: center;
